--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
                         <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Courses</a>
+                        <a class="nav-link" href="#courses">Courses</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gallery</a>
+                        <a class="nav-link" href="#gallery">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact us</a>
+                        <a class="nav-link" href="#contact">Contact us</a>
                     </li>
                     </ul>
                 </div>
@@ -116,7 +116,7 @@
 
         <!-- Start Courses Section -->
         <section class="py-5">
-            <div class="container course pb-5 pt-5">
+            <div class="container course pb-5 pt-5" id="courses">
                 <h2 class="h1-responsive font-weight-bold text-center my-4">Courses</h2>
                 <!--Section description-->
                 <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to
@@ -178,7 +178,7 @@
 
         <!-- Start Galery Section -->
         <section class="py-5">
-            <div class="container py-5">
+            <div class="container py-5" id="gallery">
                 <h2 class="h1-responsive font-weight-bold text-center my-4">Gallery</h2>
                 <!--Section description-->
                 <p class="text-center w-responsive mx-auto mb-5">
@@ -216,7 +216,7 @@
         <section class="py-5">
             <div class="container mb-5 shadow py-5">
                 <!--Section: Contact v.2-->
-                <section class="mb-4">
+                <section class="mb-4" id="contact">
 
                     <!--Section heading-->
                     <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
