--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <!--Header Start-->
     <header class="jumbotron" style="background-image: url('./img/school33.jpg')">
         <!--Navbar Start-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light btn-bg text-light">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand mx-5" href="#">School</a>
+                    <a class="navbar-brand mx-5 text-light  " href="#">School</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -42,19 +42,19 @@
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="nav navbar-nav ml-auto mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link text-light" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link text-light" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#courses">Courses</a>
+                        <a class="nav-link text-light" href="#courses">Courses</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#gallery">Gallery</a>
+                        <a class="nav-link text-light" href="#gallery">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact us</a>
+                        <a class="nav-link text-light" href="#contact">Contact us</a>
                     </li>
                     </ul>
                 </div>
@@ -65,8 +65,8 @@
         <!--Hero Start-->
         <div class="d-flex align-items-center justify-content-center" style="height: 95vh;">
             <div class="container mx-0">
-                <h1 class="title-hero">Forming bright minds for a better future</h1>
-                <button class="btn btn-success btn-lg">About out institution</button>
+                <h1 class="title-hero">Forming bright minds for a <span class="span-hero">better future</span></h1>
+                <button class="btn btn-bg btn-lg">About out institution</button>
             </div>
         </div>
         <!--Hero End-->
@@ -83,7 +83,7 @@
                     <img class="col-lg-6 align-items-stretch video-box" src="./img/home.jpg">
                     <div class="col-lg-6 d-flex flex-column justify-content-center align-items-stretch">
                         <div class="content">
-                            <h3>About our <strong>institution</strong></h3>
+                            <h3 class="title-about">About our <strong>institution</strong></h3>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
@@ -135,7 +135,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Spanish</h5>
                                 <p class="card-text">Learn a new language from scratch.</p>
-                                <a href="#!" class="btn btn-success">Read More</a>
+                                <a href="#!" class="btn btn-bg">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Chinese</h5>
                                 <p class="card-text">Learn a new language from scratch.</p>
-                                <a href="#!" class="btn btn-success">Read More</a>
+                                <a href="#!" class="btn btn-bg">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Germani</h5>
                                 <p class="card-text">Learn a new language from scratch</p>
-                                <a href="#!" class="btn btn-success">Read More</a>
+                                <a href="#!" class="btn btn-bg">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -269,7 +269,7 @@
                                 <!--Grid row-->
                             </form>
                             <div class="text-center text-md-left">
-                                <a class="btn btn-success"
+                                <a class="btn btn-bg"
                                     onclick="document.getElementById('contact-form').submit();">Send</a>
                             </div>
                             <div class="status"></div>
@@ -282,7 +282,7 @@
 
 
         <!-- Footer -->
-        <footer class="text-center text-lg-start bg-dark py-3 text-white">
+        <footer class="text-center text-lg-start btn-bg py-3 text-white">
             <!-- Section: Links  -->
             <section class="">
                 <div class="container text-center text-md-start mt-5">
