--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="d-flex align-items-center justify-content-center" style="height: 95vh;">
             <div class="container mx-0">
                 <h1 class="title-hero">Forming bright minds for a <span class="span-hero">better future</span></h1>
-                <button class="btn btn-bg btn-lg">About out institution</button>
+                <button class="btn btn-bg btn-lg" onclick="location.href='index.html#about'">About out institution</button>
             </div>
         </div>
         <!--Hero End-->
